--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
             <p id="quote"></p>
             <p id="author"></p>
         </div>
+
+        <button id="get-random-quote-api">Получить случайную цитату из API</button>
+        <div id="quote-container">
+            <p id="quote"></p>
+            <p id="author"></p>
+        </div>
+
         <form id="add-quote-form">
             <input type="text" id="quote-input" placeholder="Введите цитату">
             <input type="text" id="author-input" placeholder="Введите автора">
+            <input type="text" id="category-input" placeholder="Введите категорию">
             <button id="add-quote-button">Добавить цитату</button>
         </form>
         <div id="quotes-list">
@@ -28,14 +36,19 @@
                 <!-- сюда будут добавляться цитаты -->
             </ul>
         </div>
+        
         <div id="sort-buttons">
             <button id="sort-by-author">Сортировать по авторам</button>
             <button id="sort-by-category">Сортировать по категориям</button>
         </div>
         
-
-        <button id="get-random-quote-api">Получить случайную цитату из API</button>
-        <button id="send-quote-to-email">Отправить цитату на email</button>
+        <div id="mailing">
+            <h3>Подпишись на рассылку ежедневной цитаты дня!</h3>
+            <div id="input-send-email">
+                <input type="text" id="email-input" placeholder="Введите email">
+                <button id="send-quote-to-email">Отправить цитату на email</button> 
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
